--- a/backend/package.json
+++ b/backend/package.json
@@ -13,9 +13,7 @@
   "author": "",
   "license": "ISC",
   "type": "commonjs",
-     "engines": {
-  "node": "18.x"
-}
+  "engines": "node": "18.x",
   "dependencies": {
     "cors": "^2.8.5",
     "csv-parser": "^3.2.0",
