--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "commonjs"
   "dependencies": {
     "cors": "^2.8.5",
     "csv-parser": "^3.2.0",
