--- a/backend/package.json
+++ b/backend/package.json
@@ -5,14 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-     "dev": "nodemon server.js",
-  "start": "node server.js"
-   
+    "dev": "nodemon server.js",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs"
+  "type": "commonjs",
   "dependencies": {
     "cors": "^2.8.5",
     "csv-parser": "^3.2.0",
@@ -20,10 +19,10 @@
     "express": "^5.1.0",
     "express-validator": "^7.3.1",
     "multer": "^2.0.2",
+    "serverless-http": "^4.0.0",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
   }
 }
-
