--- a/backend/package.json
+++ b/backend/package.json
@@ -5,9 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-     "dev": "nodemon server.js",
-  "start": "node server.js"
-    
+    "dev": "nodemon server.js",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +19,7 @@
     "express": "^5.1.0",
     "express-validator": "^7.3.1",
     "multer": "^2.0.2",
+    "serverless-http": "^4.0.0",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
