--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,1 @@
-REACT_APP_API_URL=https://inventory-management-app-g7yl.onrender.com/api
+REACT_APP_API_URL=https://inventory-management-app-g7yl.onrender.com
